refactor(config): use .toList() instead of .collect(toList()) in files touched by this PR
Same brevity cleanup requested in review, applied to the remaining
.collect(toList()) call sites in files this PR already touches:
McpKafkaConditionConfigAdapter, TlsOptionsConfigAdapter,
AbstractSchemaRegistryOptionsConfigAdapter, OtlpOptionsConfigAdapter,
FileSystemStoreConfigAdapter.